--- a/templates/partial/tab_player_hit_miss.hbs
+++ b/templates/partial/tab_player_hit_miss.hbs
@@ -4,6 +4,67 @@
 <!--    Saves:      Hit #, Miss #, Undefined #,Total #, Crit Suc #, Crit Fail # -->
 <!--    Checks:     Hit #, Miss #, Undefined #,Total #, Crit Suc #, Crit Fail # -->
 <!--    Damage:     Total Damage -->
+<!-- Currently Saved obj access vars:
+        // Attack Info
+        ATK_OUTCOME_TRACKER: [DS_GLOBALS.NUM_ROLL_TYPES],        // {INT[]} Degree success for every attack; length=DEGREE_SUCCESS.size 
+        NUM_UNTARGETED_ATKS: 0,      // {INT}
+        TOTAL_ATTACKS: 0,            // {INT}
+
+        // Save Info
+        SAVE_OUTCOME_TRACKER: [DS_GLOBALS.NUM_ROLL_TYPES],       // {INT[]} Degree success for Saves length=DEGREE_SUCCESS.size 
+        NUM_UNTARGETED_SAVES: 0,     // {INT}
+        TOTAL_SAVES: 0,              // {INT}
+
+        // Advantage Info
+        NUM_ROLL_WITH_ADVANTAGE: 0,  // {INT}
+        MISS_FROM_ADV:  0,           // {INT}
+        HIT_FROM_ADV:   0,           // {INT}
+        ADV_DO_NOTHING: 0,           // {INT}
+-->
 <div>
-    
+    <h1> Some Interesting Stats </h1>
+    <table>
+        <tr> <!-- Atack Row Titles -->
+            <td>Total Attacks</td>
+            <td>Untargeted Attacks</td>
+        </tr>
+        <tr> <!-- Attack Row info -->
+            <td>{{TOTAL_ATTACKS}}</td>
+            <td>{{NUM_UNTARGETED_ATKS}}</td>
+        </tr>
+        <tr> <!-- Atack Row Deg Successs Titles -->
+            <td>Crit Success</td>
+            <td>Success</td>
+            <td>Fail</td>
+            <td>Crit Fail</td>
+        </tr>
+        <tr> <!-- Attack RowDeg Success info -->
+            <td>{{ATK_OUTCOME_TRACKER.[]}}</td>
+            <td>{{ATK_OUTCOME_TRACKER.[]}}</td>
+            <td>{{ATK_OUTCOME_TRACKER.[]}}</td>
+            <td>{{ATK_OUTCOME_TRACKER.[]}}</td>
+        </tr>
+
+        <tr> <!-- Save Row Titles -->
+            <td>Total Saves</td>
+            <td>Untargeted Saves</td>
+        </tr>
+        <tr>
+            <td>{{TOTAL_SAVES}}</td>
+            <td>{{NUM_UNTARGETED_SAVES}}</td>
+        </tr>
+
+        <tr> <!-- Save Row Info -->
+            <td>Crit Success</td>
+            <td>Success</td>
+            <td>Fail</td>
+            <td>Crit Fail</td>
+        </tr>
+        <tr>
+            <td>{{SAVE_OUTCOME_TRACKER.[]}}</td>
+            <td>{{SAVE_OUTCOME_TRACKER.[]}}</td>
+            <td>{{SAVE_OUTCOME_TRACKER.[]}}</td>
+            <td>{{SAVE_OUTCOME_TRACKER.[]}}</td>
+        </tr>
+    </table>
 </div>
