almost done with hit miss tracker for pf2

--- a/templates/partial/tab_player_base.hbs
+++ b/templates/partial/tab_player_base.hbs
@@ -58,6 +58,10 @@
                 {{#if base }}
                     {{> modules/dice-stats/templates/partial/tab_player_stats_all_dice.hbs ../playerData }}
                 {{/if}}
+
+                {{#if hitMiss}}
+                    {{> modules/dice-stats/templates/partial/tab_player_hit_miss.hbs ../playerData }}
+                {{/if}}
             </div>
         {{/each}}
     </section>
