--- a/templates/partial/tab_player_hit_miss.hbs
+++ b/templates/partial/tab_player_hit_miss.hbs
@@ -39,10 +39,10 @@
             <td>Crit Fail</td>
         </tr>
         <tr> <!-- Attack RowDeg Success info -->
-            <td>{{ATK_OUTCOME_TRACKER.[]}}</td>
-            <td>{{ATK_OUTCOME_TRACKER.[]}}</td>
-            <td>{{ATK_OUTCOME_TRACKER.[]}}</td>
-            <td>{{ATK_OUTCOME_TRACKER.[]}}</td>
+            <td>{{ATK_OUTCOME_TRACKER.[1]}}</td>
+            <td>{{ATK_OUTCOME_TRACKER.[2]}}</td>
+            <td>{{ATK_OUTCOME_TRACKER.[3]}}</td>
+            <td>{{ATK_OUTCOME_TRACKER.[4]}}</td>
         </tr>
 
         <tr> <!-- Save Row Titles -->
@@ -61,10 +61,10 @@
             <td>Crit Fail</td>
         </tr>
         <tr>
-            <td>{{SAVE_OUTCOME_TRACKER.[]}}</td>
-            <td>{{SAVE_OUTCOME_TRACKER.[]}}</td>
-            <td>{{SAVE_OUTCOME_TRACKER.[]}}</td>
-            <td>{{SAVE_OUTCOME_TRACKER.[]}}</td>
+            <td>{{SAVE_OUTCOME_TRACKER.[1]}}</td>
+            <td>{{SAVE_OUTCOME_TRACKER.[2]}}</td>
+            <td>{{SAVE_OUTCOME_TRACKER.[3]}}</td>
+            <td>{{SAVE_OUTCOME_TRACKER.[4]}}</td>
         </tr>
     </table>
 </div>
