misc updates and fix Crit successses not tracking on pf2e hit miss tracker

--- a/templates/partial/tab_player_hit_miss.hbs
+++ b/templates/partial/tab_player_hit_miss.hbs
@@ -22,7 +22,8 @@
         ADV_DO_NOTHING: 0,           // {INT}
 -->
 <div>
-    <h1> Some Interesting Stats </h1>
+    <h1> Degree Success Info </h1>
+    <h3>Attack Info</h3>
     <table>
         <tr> <!-- Atack Row Titles -->
             <td>Total Attacks</td>
@@ -44,7 +45,10 @@
             <td>{{ATK_OUTCOME_TRACKER.[3]}}</td>
             <td>{{ATK_OUTCOME_TRACKER.[4]}}</td>
         </tr>
-
+    </table>
+    <hr>
+    <h3>Save Info</h3>
+    <table>
         <tr> <!-- Save Row Titles -->
             <td>Total Saves</td>
             <td>Untargeted Saves</td>
@@ -53,7 +57,6 @@
             <td>{{TOTAL_SAVES}}</td>
             <td>{{NUM_UNTARGETED_SAVES}}</td>
         </tr>
-
         <tr> <!-- Save Row Info -->
             <td>Crit Fail</td>
             <td>Fail</td>
