--- a/src/templates/player-data/systemForms/generic/generic-chart-form.hbs
+++ b/src/templates/player-data/systemForms/generic/generic-chart-form.hbs
@@ -1,3 +1,8 @@
-<section>
-    <h1>{{localize "DiceStats.Forms.SystemData.UnknownSystemChart"}}</h1>
+<section
+  class='tab {{tab.cssClass}}'
+  data-group='primary'
+  data-tab='systemCharts'
+>
+    <h1>{{localize "DiceStats.Forms.PlayerData.Unknown.SystemDataInfo"}}</h1>
+    <button name="gen-btn" data-action="testButton">My Test Button!</button>
 </section>
