--- a/src/templates/player-data/systemForms/generic/generic-data-form.hbs
+++ b/src/templates/player-data/systemForms/generic/generic-data-form.hbs
@@ -1,3 +1,7 @@
-<section>
-    
+<section
+  class='tab {{tab.cssClass}}'
+  data-group='primary'
+  data-tab='systemDetails'
+>
+    <h1>{{localize "DiceStats.Forms.PlayerData.Unknown.SystemChartInf"}}</h1>
 </section>
