--- a/src/templates/player-data/tabs/generic-dice-data-tab.hbs
+++ b/src/templates/player-data/tabs/generic-dice-data-tab.hbs
@@ -3,5 +3,15 @@
   data-group='primary'
   data-tab='genericData'
 >
-    <h1>Generic Tab Data Here!</h1>
+  <head>
+      <script type = "text/javascript">
+          google.charts.load('current', {packages: ['corechart']});     
+      </script>
+  </head>
+    
+  <h1>Generic Tab Data Here!</h1>
+
+  <div id="d2ChartGlobal" style="width: 100%; height: 250px; border: 2px solid white;"></div>
+  
+  <canvas id="myChart" width="400" height="200"></canvas>
 </section>
